Use offcanvas for sidebar navigation, add another skiplink, misc tweaks

--- a/site/_includes/4.3/partials/sidebar_nav.html
+++ b/site/_includes/4.3/partials/sidebar_nav.html
@@ -1,61 +1,69 @@
-{% if site.environment == "production" -%}
-<form class="cf-search" role="search">
-  <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" data-docs-version="{{ version.docs | valueIfEmpty: site.version.docs }}"/>
-</form>
-{%- endif %}
-
 {%- assign page_slug = page.url | pathLast -%}
-<button class="btn btn-default my-0_5 d-md-none" aria-label="Toggle page navigation" data-cfw="collapse" data-cfw-collapse-target="#cf-links-nav">
+<button class="btn btn-default my-0_5 d-md-none" aria-label="Toggle docs navigation" data-cfw="offcanvas" data-cfw-offcanvas-target="#cf-links-offcanvas">
   <span aria-hidden="true">Pages <span class="caret" ></span></span>
 </button>
-<nav id="cf-links-nav" class="cf-links collapse" aria-label="Page">
-  <ul class="list-unstyled">
-    {% for navgroup in nav -%}
-    {%- assign active_sect = nil -%}
-    {%- assign current_sect = nil -%}
-    {%- assign group_slug = navgroup.title | slug -%}
-    {%- assign first_slug = navgroup.pages[0].title | slug -%}
-    {%- assign page_count = navgroup.pages | size -%}
-    {% if group == group_slug %}
-      {%- assign active_sect = ' active-section' -%}
-      {%- assign current_sect = ' aria-current="true"' -%}
-    {%- endif -%}
-    <li class="mb-0_25{% if page_count > 0 %} has-children{% endif %}">
-      {%- if group_slug == 'about' -%}
-      <a href="{{ site.path }}/{{ group_slug }}/{{ first_slug }}/" class="nav-link cf-sidebar-header fs-large font-weight-sbold{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}"{{- current_sect -}}>
-      {%- else -%}
-      <button class="nav-link cf-sidebar-header fs-large font-weight-sbold{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}"{{- current_sect -}}>
-      {%- endif -%}
-        <span class="nav-link-inner">
-          {%- if page_count > 0 -%}<span class="caret" aria-hidden="true"></span>{%- endif -%}
-          <span class="cf-sidebar-header-title{{ active_sect }}">{{- navgroup.title -}}</span>
-        </span>
-      {%- if group_slug == 'about' -%}
-      </a>
-      {%- else -%}
-      </button>
-      {%- endif -%}
-      <div id="sidenav{{ forloop.index }}">
-        <ul class="nav flex-column mb-0 pb-0_25">
-          {% for doc in navgroup.pages %}
-            {%- assign doc_slug = doc.title | slug -%}
-            {%- assign active_page = nil -%}
-            {%- assign current_page = nil -%}
-            {%- if doc_slug == page_slug and group == group_slug-%}
-              {%- assign active_page = ' active' -%}
-              {%- assign current_page = ' aria-current="page"' -%}
-            {%- endif -%}
-            <li class="nav-item">
-              {%- if group_slug == 'about' -%}
-                <a href="{{ site.path }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link{{ active_page }}"{{ current_page }}><span class="nav-link-inner">{{ doc.title }}</span></a>
-              {%- else -%}
-                <a href="{{ site.path }}{{ pathVersion }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link{{ active_page }}"{{ current_page }}><span class="nav-link-inner">{{ doc.title }}</span></a>
-              {%- endif -%}
-            </li>
-          {% endfor -%}
-        </ul>
-      </div>
-    </li>
-    {%- endfor %}
-  </ul>
-</nav>
+<div id="cf-links-offcanvas" class="offcanvas-md offcanvas-start">
+  <div class="offcanvas-header border-b">
+    <div class="offcanvas-title h5">Browse docs</div>
+    <button type="button" class="close" data-cfw-dismiss="offcanvas" data-cfw-offcanvas-target="#cf-links-offcanvas" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  </div>
+  <div class="offcanvas-body d-md-block">
+    {% if site.environment == "production" -%}
+    <form class="cf-search" role="search">
+      <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" data-docs-version="{{ version.docs | valueIfEmpty: site.version.docs }}"/>
+    </form>
+    {%- endif %}
+
+    <nav id="cf-links-nav" class="cf-links" aria-label="Docs">
+      <ul class="list-unstyled">
+        {% for navgroup in nav -%}
+        {%- assign active_sect = nil -%}
+        {%- assign current_sect = nil -%}
+        {%- assign group_slug = navgroup.title | slug -%}
+        {%- assign first_slug = navgroup.pages[0].title | slug -%}
+        {%- assign page_count = navgroup.pages | size -%}
+        {% if group == group_slug %}
+          {%- assign active_sect = ' active-section' -%}
+          {%- assign current_sect = ' aria-current="true"' -%}
+        {%- endif -%}
+        <li class="mb-0_25{% if page_count > 0 %} has-children{% endif %}">
+          {%- if group_slug == 'about' -%}
+          <a href="{{ site.path }}/{{ group_slug }}/{{ first_slug }}/" class="nav-link cf-sidebar-header fs-large font-weight-sbold{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}"{{- current_sect -}}>
+          {%- else -%}
+          <button class="nav-link cf-sidebar-header fs-large font-weight-sbold{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}"{{- current_sect -}}>
+          {%- endif -%}
+            <span class="nav-link-inner">
+              {%- if page_count > 0 -%}<span class="caret" aria-hidden="true"></span>{%- endif -%}
+              <span class="cf-sidebar-header-title{{ active_sect }}">{{- navgroup.title -}}</span>
+            </span>
+          {%- if group_slug == 'about' -%}
+          </a>
+          {%- else -%}
+          </button>
+          {%- endif -%}
+          <div id="sidenav{{ forloop.index }}">
+            <ul class="nav flex-column mb-0 pb-0_25">
+              {% for doc in navgroup.pages %}
+                {%- assign doc_slug = doc.title | slug -%}
+                {%- assign active_page = nil -%}
+                {%- assign current_page = nil -%}
+                {%- if doc_slug == page_slug and group == group_slug-%}
+                  {%- assign active_page = ' active' -%}
+                  {%- assign current_page = ' aria-current="page"' -%}
+                {%- endif -%}
+                <li class="nav-item">
+                  {%- if group_slug == 'about' -%}
+                    <a href="{{ site.path }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link{{ active_page }}"{{ current_page }}><span class="nav-link-inner">{{ doc.title }}</span></a>
+                  {%- else -%}
+                    <a href="{{ site.path }}{{ pathVersion }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link{{ active_page }}"{{ current_page }}><span class="nav-link-inner">{{ doc.title }}</span></a>
+                  {%- endif -%}
+                </li>
+              {% endfor -%}
+            </ul>
+          </div>
+        </li>
+        {%- endfor %}
+      </ul>
+    </nav>
+  </div>
+</div>
