--- a/site/_includes/4.3/partials/skiplink.html
+++ b/site/_includes/4.3/partials/skiplink.html
@@ -1,1 +1,4 @@
 <a class="skiplink sr-only-focusable" href="#content">Skip to main content</a>
+{% if layout == "doc" -%}
+<a class="skiplink sr-only-focusable d-md-down-none" href="#cf-links-nav">Skip to docs navigation</a>
+{%- endif %}
