--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -36,6 +36,21 @@
         &.open {
             display: block;
         }
+
+        // Prevent item from overflowing when no horizontal menu padding
+        @if $dropdown-padding-y == 0 {
+            > dropdown-item:first-child,
+            > li:first-child a,
+            > li:first-child .dropdown-item {
+                @include border-top-radius($dropdown-inner-border-radius);
+            }
+
+            > dropdown-item:last-child,
+            > li:last-child a,
+            > li:last-child .dropdown-item {
+                @include border-bottom-radius($dropdown-inner-border-radius);
+            }
+        }
     }
 
     // Dropdown submenu additions
@@ -84,17 +99,6 @@
         white-space: nowrap; // prevent links from randomly breaking onto new lines
         background: none; // 1
         border: 0; // 1
-
-        // Prevent item from overflowing when no horizontal menu padding
-        @if $dropdown-padding-y == 0 {
-            &:first-child {
-                @include border-top-radius($dropdown-inner-border-radius);
-            }
-
-            &:last-child {
-                @include border-bottom-radius($dropdown-inner-border-radius);
-            }
-        }
 
         &.active {
             color: $dropdown-link-active-color;
