Switch to Alolia DocSearch v3 for v4.3.x
Older doc versions not being updated to new search.

--- a/site/_includes/4.3/layouts/doc.html
+++ b/site/_includes/4.3/layouts/doc.html
@@ -20,7 +20,7 @@
 {% include body %}
 {% include footer -%}
 
-{% if site.environment == "production" -%}
+{% if layout == "doc" -%}
 {% include algolia %}
 {% endif -%}
 </body>
