--- a/site/_includes/4.3/partials/algolia.html
+++ b/site/_includes/4.3/partials/algolia.html
@@ -1,30 +1,33 @@
-<script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+<link href="https://VVDVJM0JO8-dsn.algolia.net" rel="preconnect" crossorigin>
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
 <script>
 (function() {
     'use strict';
 
-    if (!window.docsearch) {
+    var searchElement = document.getElementById('docsearch');
+
+    if (!window.docsearch || !searchElement) {
         return;
     }
 
-    var inputElement = document.getElementById('docsearch');
-    var siteDocsVersion = inputElement.getAttribute('data-docs-version');
+    var siteDocsVersion = searchElement.getAttribute('data-docs-version');
 
     window.docsearch({
-        apiKey: '3b9b6e000775400f4833a14c4daa6049',
+        apiKey: 'b69a9a2a34fe6a689f65620db813cab3',
+        appId: "VVDVJM0JO8",
         indexName: 'figuration',
-        inputSelector: '#docsearch',
-        algoliaOptions: {
+        container: searchElement,
+        searchParameters: {
             facetFilters: ['version:' + siteDocsVersion]
         },
-        transformData: function(hits) {
-            return hits.map(function(hit) {
+        transformItems: function(items) {
+            return items.map(function(item) {
                 // Prevent jumping to first header
-                if (hit.anchor === 'content') {
-                    hit.url = hit.url.replace(/#content$/, '');
-                    hit.anchor = null;
+                if (item.anchor === 'content') {
+                    item.url = item.url.replace(/#content$/, '');
+                    item.anchor = null;
                 }
-                return hit;
+                return item;
             });
         },
         // Set debug to true if you want to inspect the dropdown
@@ -32,3 +35,5 @@
     });
 }());
 </script>
+<!-- Interim fix for Safari scroll issue: https://github.com/algolia/docsearch/issues/1260 -->
+<div class="position-fixed"><input type="text"></div>
