--- a/site/assets/4.3/css/docs-rtl.css
+++ b/site/assets/4.3/css/docs-rtl.css
@@ -263,129 +263,107 @@
   border-bottom: 1px solid #bfc6cd;
 }
 
-.cf-search::before {
-  position: absolute;
-  top: 50%;
-  right: .5rem;
-  z-index: 1;
-  display: block;
-  width: 1rem;
-  height: 1rem;
-  margin-top: -.5rem;
-  content: " ";
-  background: url("../../../assets/img/magnifying-glass.svg") no-repeat center;
-  background-size: 1rem 1rem;
+.DocSearch-Container {
+  --docsearch-muted-color: #5e7182;
+  --docsearch-hit-shadow: none;
 }
 
-.docsearch {
-  max-width: 20rem;
-  padding-right: 1.75rem;
-}
-
-.algolia-autocomplete {
+.DocSearch-Button {
+  --docsearch-searchbox-background: #fff;
+  --docsearch-searchbox-color: #424f5b;
+  --docsearch-searchbox-focus-background: #fff;
+  --docsearch-searchbox-shadow: 0 0 0 0.25rem rgba(0, 85, 233, 0.4);
+  --docsearch-text-color: #424f5b;
+  --docsearch-muted-color: #999;
   width: 100%;
+  margin: 0;
+  border: 1px solid #bfc6cd;
+  border-radius: 0.375rem;
 }
 
-.algolia-autocomplete .ds-dropdown-menu {
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
+.DocSearch-Button .DocSearch-Search-Icon {
+  opacity: .65;
 }
 
-@media (max-width: 61.98em) {
-  .algolia-autocomplete .ds-dropdown-menu {
-    min-width: auto;
-  }
+.DocSearch-Button:active, .DocSearch-Button:focus, .DocSearch-Button:hover {
+  border-color: #0055e9;
 }
 
-@media (min-width: 36em) {
-  .algolia-autocomplete .ds-dropdown-menu {
-    min-width: 450px;
-  }
+.DocSearch-Button:active .DocSearch-Search-Icon, .DocSearch-Button:focus .DocSearch-Search-Icon, .DocSearch-Button:hover .DocSearch-Search-Icon {
+  opacity: 1;
 }
 
-.algolia-autocomplete .ds-dropdown-menu .ds-suggestions {
-  border-bottom: 1px solid #858585;
+.DocSearch-Button-Keys {
+  min-width: 0;
+  padding-left: .25rem;
+  padding-right: .25rem;
+  background: #eff1f3;
+  border-radius: 0.25rem;
 }
 
-.algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion.suggestion-layout-simple,
-.algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion:not(.suggestion-layout-simple) .algolia-docsearch-suggestion--content {
-  background-color: rgba(69, 142, 225, 0.1);
+.DocSearch-Button-Key {
+  top: 0;
+  width: auto;
+  height: 1.25rem;
+  padding-left: .125rem;
+  padding-right: .125rem;
+  margin-left: 0;
+  color: #5e7182;
+  font-size: 0.875rem;
+  background: none;
+  box-shadow: none;
 }
 
-.algolia-autocomplete .algolia-docsearch-suggestion {
+.DocSearch-Commands-Key {
+  padding-right: 1px;
+  font-size: 0.875rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  background-image: none;
+  box-shadow: none;
+}
+
+.DocSearch-Form {
+  border-radius: 0.375rem;
+}
+
+.DocSearch-Hits mark {
   padding: 0;
 }
 
-.algolia-autocomplete .algolia-docsearch-suggestion--category-header {
-  padding: 2px 6px;
-  margin-top: 0;
-  font-weight: 700;
-  color: #292929;
-  background-color: #a0cbe3;
-  border-top: 1px solid #858585;
-  border-bottom: 0;
+.DocSearch-Hit {
+  padding-bottom: 0;
+  border-radius: 0;
 }
 
-.algolia-autocomplete .algolia-docsearch-suggestion--wrapper {
-  display: table !important;
-  padding: 0;
+.DocSearch-Hit a {
+  border-radius: 0;
+  border: solid #bfc6cd;
+  border-width: 0 1px 1px;
 }
 
-@media (max-width: 768px) {
-  .algolia-autocomplete .algolia-docsearch-suggestion--wrapper {
-    display: block !important;
+.DocSearch-Hit:first-child a {
+  border-top-right-radius: 0.375rem;
+  border-top-left-radius: 0.375rem;
+  border-top-width: 1px;
+}
+
+.DocSearch-Hit:last-child a {
+  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
+.DocSearch-Hit-icon {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 750px) {
+  .DocSearch-Button-Keys {
+    display: flex;
   }
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column {
-  display: table-cell !important;
-  float: none !important;
-  padding: 6px 10px;
-  color: #383838;
-  background-color: #f0f0f0;
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column::before {
-  background: #858585;
-}
-
-@media (max-width: 768px) {
-  .algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column {
-    display: block !important;
+  .DocSearch-Button-Placeholder {
+    display: block;
   }
-  .algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column::after {
-    content: none !important;
-  }
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--content {
-  display: table-cell !important;
-  float: none !important;
-  padding: 6px 10px;
-  background-color: #fff;
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--content::before {
-  background: #858585;
-}
-
-@media (max-width: 768px) {
-  .algolia-autocomplete .algolia-docsearch-suggestion--content {
-    display: block !important;
-    padding-bottom: .25rem !important;
-    margin-bottom: .5rem;
-  }
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--highlight {
-  background-color: rgba(143, 187, 237, 0.2);
-}
-
-.algolia-autocomplete .algolia-docsearch-suggestion--title {
-  margin-bottom: 0;
-}
-
-.algolia-autocomplete .algolia-docsearch-footer {
-  margin-top: 8px;
 }
 
 .cf-sidebar {
