Pagination: Add var for `font-weight`

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1031,6 +1031,7 @@ $pagination-border-color:       $btn-default-border-color !default;
 $pagination-border-radius:      $border-radius !default;
 
 $pagination-font-size:          $font-size-base !default;
+$pagination-font-weight:        null !default;
 $pagination-bg:                 $btn-default-bg !default;
 $pagination-color:              $btn-default-color !default;
 
