--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -18,6 +18,7 @@
         min-width: 2.25em;
         padding: $pagination-padding-y $pagination-padding-x;
         @include font-size($pagination-font-size);
+        font-weight: $pagination-font-weight;
         line-height: $pagination-line-height;
         border: 0 solid $pagination-border-color;
         @include border-radius($pagination-border-radius);
