--- a/site/_includes/4.3/partials/head_analytics.html
+++ b/site/_includes/4.3/partials/head_analytics.html
@@ -1,10 +1,10 @@
 {%- if site.environment == "production" %}
-<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BBZN0PLXQV"></script>
 <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'UA-9130143-15', 'figuration.org');
-  ga('set', 'anonymizeIp', true);
-  ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-BBZN0PLXQV');
 </script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 {%- endif %}
