--- a/site/_includes/4.3/partials/footer.html
+++ b/site/_includes/4.3/partials/footer.html
@@ -25,10 +25,10 @@
       <div class="row">
         <div class="media col">
           <div class="d-flex me-0_5">
-            <img src="{{ site.path }}/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo" />
+            <img src="{{ site.path }}/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo">
           </div>
           <div class="media-body">
-            <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+            <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br>
             <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
           </div>
         </div>
