--- a/site/assets/4.3/scss/_toc.scss
+++ b/site/assets/4.3/scss/_toc.scss
@@ -1,6 +1,6 @@
 .cf-toc-align {
-    margin-right: $grid-gutter-width / -2;
-    margin-left: $grid-gutter-width / -2;
+    margin-right: $grid-gutter-width * -.5;
+    margin-left: $grid-gutter-width * -.5;
 }
 
 .cf-content-lead,
